# dataos_poc

./: .gitignore  Ideas.md  README.md  References.md  WasteService.wsdl  docker-compose.yml  echo.py  pyproject.toml  test_main.http
app/: main.py
app/process/: main.py  noise.py  tasks.py
app/routers/: ai.py  hello.py  noise.py
app/schema/: ai.py  location.py  noise.py
app/services/: address.py  ai.py  notifications.py
app/utils/: constants.py  logger_config.py
bpmn/: duplicate.dmn  find_officer.dmn  human_noise_review.form  noise.bpmn
