[tool.poetry]
name = "fastapi-kafka"
version = "0.1.0"
description = ""
authors = ["Vijayaraghavan Sundararaman <vijaygenius123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pyzeebe = "^3.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
